<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SleepCycles</string>
    <string name="set_alarm">Add alert</string>
    <string name="hour_text">Hour Text</string>
    <string name="length_text">Length Text</string>
    <string name="wake_time">Select wake time</string>
    <string name="bedtime_notification_ticker">Time to go to bed…</string>
    <string name="bedtime_notification_title">SleepCycles</string>
    <string name="bedtime_notification_text">Wake time is in </string>
    <string name="one_minute"> minute</string>
    <string name="multipe_minutes"> minutes</string>
    <string name="one_hour"> hour</string>
    <string name="multipe_hours"> hours</string>
    <string name="and"> and </string>
    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="restart_button">Restart</string>
    <string name="calculate_sleep_cycle">Time sleep cycle length</string>
    <string name="help_button">Help</string>
    <string name="calibrate">Calibrate</string>
    <string name="alert">Alert</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="help">If an Intent is send to the Android system, it will determine suitable applications for this Intent. If several components have been registered for this type of Intent, Android offers the user the choice to open one of them.

This determination is based on IntentFiltes. An IntentFilter specifies the types of Intent that an activity, service, or broadcast receiver can respond to. An IntentFilter declares the capabilities of a component. It specifies what an Activity or Service can do and what types of broadcasts a Rseceiver can handle. It allow the corresponding component to receive Intents of the declared type.

IntentFilters are typically defined via the AndroidManifest.xml file. For BroadcastReceiver it is also possible to define them in coding. An IntentFilters is defined by its category, action and data filters. It can also contain additional metadata.

The following will register an Activity for the Intent which is triggered when someone wants to open a webpage.

Therefore Intents allow to combine loosely coupled components to perform certain tasks.

Intents can be used to signal to the Android system that a certain event has occurred. Other components in Android can register to this event and will get notified.

Intents are instances of the android.content.Intent class.

Intents are send to the Android system. Depending on how the Intent was constructed the Android system will run an receiver determination and determine what to do.

An Intent can also contain data. This data can be used by the receiving component. For example your application can calls via an Intent a browser component. As data is it may send the URL to the browser component.

Android supports explicit and implicit Intents.
</string>

    
    
    <string name="turn_off">Turn Off</string>
    <string name="next">Start</string>
    <string name="sleep_cycles">"Sleep cycles "</string>
    <string name="cycle_length">"Cycle Length "</string>
    <string name="sleep_length">"Sleep Length "</string>
    <string name="notification_added">"Notification added for "</string>
    <string name="for_wake_time_in">" for wake time in "</string>
    <string name="length">"Length "</string>
    <string name="time">"Time "</string>
    <string name="cycles">"Cycles "</string>

</resources>