<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:padding="0dp"
        android:id="@+id/btn_turn_off"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="29dp"
        android:layout_marginLeft="30dp"
        android:background="@drawable/button"
        android:text="@string/turn_off" />

    <Button
        android:padding="0dp"
        android:id="@+id/btn_next"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_turn_off"
        android:layout_alignBottom="@+id/btn_turn_off"
        android:layout_alignParentRight="true"
        android:layout_marginRight="42dp"
        android:background="@drawable/button"
        android:text="@string/next" />

    <TextView
        android:id="@+id/help_text"
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:layout_above="@+id/btn_turn_off"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="38dp"
        android:padding="@dimen/padding_medium"
        android:scrollbars="vertical"
        android:text="@string/help"
        tools:context=".HelpActivity" />

</RelativeLayout>